--- a/frontend/src/pages/spools/[id].astro
+++ b/frontend/src/pages/spools/[id].astro
@@ -143,7 +143,7 @@ const { id } = Astro.params
     </div>
   </div>
   
-  <script src="/vendor/qrcode.min.js"></script>
+  <script is:inline src="/vendor/qrcode.min.js"></script>
   <script>
     import { t, initI18n } from '../../lib/i18n'
     await initI18n()
